--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,7 @@ deploy-prod:
     - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
   environment: production
 
-on: push
 
-name: main
 on:
   pull_request:
     branches:
@@ -32,7 +30,7 @@ on:
 jobs:
     check_ci:
         steps:
-#          - uses: actions/checkout@v2
+          - uses: actions/checkout@v2
 #          - uses: actions/setup-node@v2
 #             with:
 #              node-version: '12'
