--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,7 @@ deploy-prod:
   environment: production
 
 
-on:
-  pull_request:
-    branches:
-      - main
+on: push
 jobs:
     check_ci:
         steps:
